added different html and css files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>5 things about Yuliana</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div class="mainHeader">
@@ -12,11 +12,11 @@
         </div>
         <br>
         <div class="list">
-            <div><h2 class="listMember">1st fact</h2></div>
-            <div><h2 class="listMember">2nd fact</h2></div>
-            <div><h2 class="listMember">3d fact</h2></div>
-            <div><h2 class="listMember">4th fact</h2></div>
-            <div><h2 class="listMember">5th fact</h2></div>
+            <div><a href="links/1thing.html" target="_blank"><h2 class="listMember">1st fact</h2></a></div>
+            <div><a href="links/2thing.html" target="_blank"><h2 class="listMember">2nd fact</h2></a></div>
+            <div><a href="links/3thing.html" target="_blank"><h2 class="listMember">3d fact</h2></a></div>
+            <div><a href="links/4thing.html" target="_blank"><h2 class="listMember">4th fact</h2></a></div>
+            <div><a href="links/5thing.html" target="_blank"><h2 class="listMember">5th fact</h2></a></div>
         </div>
     </body>
 </html>
