site 5 things about Yuliana done

--- a/index.html
+++ b/index.html
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>5 things about Yuliana</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <div class="mainHeader">
-            <h1>5 things about Yuliana:</h1>
-            <h2>(choose one of the lines below and click on it)</h2>
+
+<head>
+    <title>5 things about Yuliana</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <div class="mainHeader">
+        <h1>5 things about Yuliana:</h1>
+        <h2>(choose one of the lines below and click on it)</h2>
+    </div>
+    <br>
+    <div class="list">
+        <div class="listMember">
+            <a class="link" href="links/1thing.html">
+                <h2>1st fact</h2>
+            </a>
         </div>
-        <br>
-        <div class="list">
-            <div><a href="links/1thing.html" target="_blank"><h2 class="listMember">1st fact</h2></a></div>
-            <div><a href="links/2thing.html" target="_blank"><h2 class="listMember">2nd fact</h2></a></div>
-            <div><a href="links/3thing.html" target="_blank"><h2 class="listMember">3d fact</h2></a></div>
-            <div><a href="links/4thing.html" target="_blank"><h2 class="listMember">4th fact</h2></a></div>
-            <div><a href="links/5thing.html" target="_blank"><h2 class="listMember">5th fact</h2></a></div>
+        <div class="listMember">
+            <a class="link" href="links/2thing.html">
+                <h2>2nd fact</h2>
+            </a>
         </div>
-    </body>
+        <div class="listMember">
+            <a class="link" href="links/3thing.html">
+                <h2>3d fact</h2>
+            </a>
+        </div>
+        <div class="listMember">
+            <a class="link" href="links/4thing.html">
+                <h2>4th fact</h2>
+            </a>
+        </div>
+        <div class="listMember">
+            <a class="link" href="links/5thing.html">
+                <h2>5th fact</h2>
+            </a>
+        </div>
+    </div>
+</body>
+
 </html>
