--- a/links/2thing.html
+++ b/links/2thing.html
@@ -2,25 +2,25 @@
 <html>
 
 <head>
-    <title>1st fact about Yuliana</title>
+    <title>2nd fact about Yuliana</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/1style.css">
+    <link rel="stylesheet" href="../css/2style.css">
 </head>
 
 <body>
     <div class="mainHeader">
-        <h1>1st fact about Yuliana:</h1>
-        <h2>(wow did you know that?)</h2>
+        <h1>2nd fact about Yuliana:</h1>
+        <h2>(that's so exciting OMG)</h2>
     </div>
     <br>
     <div class="fact">
-            <h3>Fact number one:</h3>
-            <h2>she LOVES to dance!</h2>
+            <h3>Fact number two:</h3>
+            <h2>she LOVES sweets!</h2>
     </div>
 
     <div class="buttonBar">
         <div>
-            <img src="../img/1.jpg" alt="1fact">
+            <img src="../img/2.jpg" alt="2fact">
         </div>
         <div class="buttonMenu">
             <a class="link" href="../index.html">
@@ -33,7 +33,7 @@
             </a>
         </div>
         <div class="buttonNext">
-            <a class="link" href="2thing.html">
+            <a class="link" href="3thing.html">
                 <h3>Next fact</h3>
             </a>
         </div>
