--- a/links/3thing.html
+++ b/links/3thing.html
@@ -2,25 +2,25 @@
 <html>
 
 <head>
-    <title>1st fact about Yuliana</title>
+    <title>3d fact about Yuliana</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/1style.css">
+    <link rel="stylesheet" href="../css/3style.css">
 </head>
 
 <body>
     <div class="mainHeader">
-        <h1>1st fact about Yuliana:</h1>
-        <h2>(wow did you know that?)</h2>
+        <h1>3d fact about Yuliana:</h1>
+        <h2>(shocked!!!)</h2>
     </div>
     <br>
     <div class="fact">
-            <h3>Fact number one:</h3>
-            <h2>she LOVES to dance!</h2>
+            <h3>Fact number three:</h3>
+            <h2>she speaks English, Spanish, German and a little bit Italian!</h2>
     </div>
 
     <div class="buttonBar">
         <div>
-            <img src="../img/1.jpg" alt="1fact">
+            <img src="../img/3.jpg" alt="3fact">
         </div>
         <div class="buttonMenu">
             <a class="link" href="../index.html">
@@ -28,12 +28,12 @@
             </a>
         </div>
         <div class="buttonPrev">
-            <a class="link" href="1thing.html">
+            <a class="link" href="2thing.html">
                 <h3>Previous fact</h3>
             </a>
         </div>
         <div class="buttonNext">
-            <a class="link" href="2thing.html">
+            <a class="link" href="4thing.html">
                 <h3>Next fact</h3>
             </a>
         </div>
